[metadata]
name = PyAgeEncrypt
module = pyageencrypt
version = 0.1.0
url = https://github.com/zatoichi-labs/pyageencrypt
author = Zatoichi Labs
author_email = admin@zatoichi-labs.com
description = Python bindings for the age encryption tool
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
keywords = encryption, age
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Topic :: Documentation
project_urls =
    Homepage = https://github.com/zatoichi-labs/pyageencrypt

[options]
include_package_data = True
packages = find:
