[metadata]
name = pyrageencrypt
module = pyrageencrypt
version = 0.1.0
url = https://github.com/zatoichi-labs/pyrageencrypt
author = Zatoichi Labs
author_email = admin@zatoichi-labs.com
description = Python bindings for the age encryption tool
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
keywords = encryption, age
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Topic :: Security :: Cryptography
project_urls =
    Homepage = https://github.com/zatoichi-labs/pyrageencrypt

[options]
include_package_data = True
packages = find:
